@@ -4,7 +4,7 @@
 # This script is a special variant of the atlocal script for testing
 # with Valgrind.
 
-# Copyright (C) 2003-2012, 2014-2017 Free Software Foundation, Inc.
+# Copyright (C) 2003-2012, 2014-2018 Free Software Foundation, Inc.
 # Written by Keisuke Nishida, Roger While, Simon Sobisch
 #
 # This file is part of GnuCOBOL.
@@ -98,6 +98,9 @@ PATHSEP=":"
 # Helper script to unify listings (replace version, date, time)
 UNIFY_LISTING="${abs_srcdir}/listings-sed.sh"
 
+# Test runner for manual tests, content may changed by the user
+RUN_PROG_MANUAL="${abs_builddir}/run_prog_manual.sh"
+
 # be sure to use the English messages
 LC_ALL=C
 export LC_ALL
@@ -143,7 +146,7 @@ if test "x$MSYSTEM" != "x" -o "$OSTYPE" = "cygwin"; then
 fi
 
 
-export COBC COBCRUN COBCRUN_DIRECT COBCRUN_WITHOUT_VG
+export COBC COBCRUN COBCRUN_DIRECT RUN_PROG_MANUAL
 export PATHSEP COB_OBJECT_EXT COB_EXE_EXT
 export COB_CFLAGS COB_LDFLAGS COB_LIBS
 export COB_CONFIG_DIR COB_RUNTIME_CONFIG COB_COPY_DIR
